array.island.Island.scala.error
Compilation error:
Island:2: error: Missing closing brace `}' assumed here
var num = 0
^Island:2: error: expected class or object definition
var num = 0
^Island:4: error: expected class or object definition
def island(num:Array[Int]): Int = {
^