array.island.Island.scala.code
var num = 0

def island(num:Array[Int]): Int = {
  for (i<-1 to num.length-1){
    if ((num(i+1) > num(i)){
      num+=1
    }
  return num
}
